	- KAL: Add restore/wipe functionality to the KALs controlled axes.
		- Toggling the "Restore KAL" toggle in the GamePlay section of the settings will restore or wipe the controlled axes from KALs on all loaded vessels.
		- Vessels spawned via BDA+'s spawning routines will automatically have this applied.
		- The KALs on all loaded vessels will also be restored/wiped on competition start.
- AI:
	- Axis groups: set the main throttle, pitch, yaw and roll axis groups when setting the flight control state, allowing the BDA+ pilot AI to use these axis groups.
- VesselMover:
	- Add option to immediately place the vessel after spawning.
	- Adjustments to movement in map mode.
	- Safer placement-lower.
- UI:
	- Auto-switch UI focus to new input text fields in Vessel Mover and Custom Spawn Templates.
	- Move the "Auto-Disable UI" toggle to the UI section of the settings.
- Competition:
	- Add sorting and "scores" for waypoint runs in the Vessel Switcher for waypoints game mode.

v1.5.9.4
IMPROVEMENTS / FIXES
- GameModes:
	- Rewrite how repulsors work, using the default altitude as the target altitude and a decaying exponential balanced at the target altitude and with velocity damping. Include a slider for setting the strength of the repulsor effect, which affects the scale of the exponential.
- UI:
	- Update some Immelmann Turn text that was missed.
	- Favour craft close to going through waypoints to switch the camera to.
- Weapons:
	- Correction to manual aiming when the Krakensbane frame velocity is non-zero.
- RWP:
	- Season 5 Round 5:
		- Adjust how drag is applied to kerbals in S5R5 to give a smoother response.
		- Set the Immelmann angle to 0 for S5R5 since the craft designs don't pitch well.
		- Add a custom message for the GM kill for S5R5.

v1.5.9.3
IMPROVEMENTS / FIXES
- Internal:
	- Add a Semi-Logarithmic FloatRange slider UI, which gives ranges where the values are of the form: 0.8, 0.9, 1, 2, 3, ..., 8, 9, 10, 20, 30, ..., 80, 90, 100, 200.
- AI: