@@ -37,6 +37,9 @@ namespace BDArmory.Control
         /// </summary>
         protected BDAirspeedControl speedController;
 
+        protected bool hasAxisGroupsModule = false;
+        protected AxisGroupsModule axisGroupsModule;
+
         protected Transform vesselTransform => vessel.ReferenceTransform;
 
         protected StringBuilder debugString = new StringBuilder();
@@ -110,6 +113,26 @@ namespace BDArmory.Control
                                  // (this is another reason why target selection is hardcoded into the base class, so changing this later is less of a mess :) )
 
             AutoPilot(s);
+        }
+
+        /// <summary>
+        /// Set the flight control state and also the corresponding axis groups.
+        /// </summary>
+        /// <param name="s">The flight control state</param>
+        /// <param name="pitch">pitch</param>
+        /// <param name="yaw">yaw</param>
+        /// <param name="roll">roll</param>
+        protected virtual void SetFlightControlState(FlightCtrlState s, float pitch, float yaw, float roll)
+        {
+            s.pitch = pitch;
+            s.yaw = yaw;
+            s.roll = roll;
+            if (hasAxisGroupsModule)
+            {
+                axisGroupsModule.UpdateAxisGroup(KSPAxisGroup.Pitch, pitch);
+                axisGroupsModule.UpdateAxisGroup(KSPAxisGroup.Yaw, yaw);
+                axisGroupsModule.UpdateAxisGroup(KSPAxisGroup.Roll, roll);
+            }
         }
 
         #region Pilot on/off
@@ -215,6 +238,8 @@ namespace BDArmory.Control
 
                 activeVessel = vessel;
                 UpdateWeaponManager();
+                axisGroupsModule = vessel.FindVesselModuleImplementing<AxisGroupsModule>(); // Look for an axis group module so we can set the axis groups when setting the flight control state.
+                if (axisGroupsModule != null) hasAxisGroupsModule = true;
 
                 if (pilotEnabled)
                 {
