@@ -968,8 +968,6 @@ namespace BDArmory.Control
         bool useAB = true;
         bool useBrakes = true;
         bool regainEnergy = false;
-        AxisGroupsModule axisGroupsModule;
-        bool hasAxisGroupsModule = false; // To avoid repeated null checks
 
         //collision detection (for other vessels).
         const int vesselCollisionAvoidanceTickerFreq = 10; // Number of fixedDeltaTime steps between vessel-vessel collision checks.
@@ -1556,11 +1554,6 @@ namespace BDArmory.Control
             SetOnTerrainAvoidanceCriticalAngleChanged();
             SetOnImmelmannTurnAngleChanged();
             SetupAutoTuneSliders();
-            if (HighLogic.LoadedSceneIsFlight)
-            {
-                axisGroupsModule = vessel.FindVesselModuleImplementing<AxisGroupsModule>(); // Look for an axis group module so we can set the axis groups when setting the flight control state.
-                if (axisGroupsModule != null) hasAxisGroupsModule = true;
-            }
             if ((HighLogic.LoadedSceneIsFlight || HighLogic.LoadedSceneIsEditor) && storedSettings != null && storedSettings.ContainsKey(HighLogic.LoadedSceneIsFlight ? vessel.GetDisplayName() : EditorLogic.fetch.ship.shipName))
             {
                 Events["RestoreSettings"].active = true;
@@ -2521,26 +2514,6 @@ namespace BDArmory.Control
                 debugString.AppendLine(String.Format("Pitch: P: {0,7:F4}, I: {1,7:F4}, D: {2,7:F4}", pitchProportional, pitchIntegral, pitchDamping));
                 debugString.AppendLine(String.Format("Yaw: P: {0,7:F4}, I: {1,7:F4}, D: {2,7:F4}", yawProportional, yawIntegral, yawDamping));
                 debugString.AppendLine(String.Format("Roll: P: {0,7:F4}, I: {1,7:F4}, D: {2,7:F4}", rollProportional, rollIntegral, rollDamping));
-            }
-        }
-
-        /// <summary>
-        /// Set the flight control state and also the corresponding axis groups.
-        /// </summary>
-        /// <param name="s">The flight control state</param>
-        /// <param name="pitch">pitch</param>
-        /// <param name="yaw">yaw</param>
-        /// <param name="roll">roll</param>
-        void SetFlightControlState(FlightCtrlState s, float pitch, float yaw, float roll)
-        {
-            s.pitch = pitch;
-            s.yaw = yaw;
-            s.roll = roll;
-            if (hasAxisGroupsModule)
-            {
-                axisGroupsModule.UpdateAxisGroup(KSPAxisGroup.Pitch, pitch);
-                axisGroupsModule.UpdateAxisGroup(KSPAxisGroup.Yaw, yaw);
-                axisGroupsModule.UpdateAxisGroup(KSPAxisGroup.Roll, roll);
             }
         }
 
